--- a/html/matchs.html
+++ b/html/matchs.html
@@ -31,7 +31,8 @@
                             <div class="img" style="background-image: url(/static/img/{{item.3}}.png);"></div>
                         </div>
                         <h1 class="title"> {{item.0}} - {{item.1}} <br></h1>
-                        <h2 class="title">{{item.4}}<br></h2><a href="#">Info sur le match</a>
+                        <h2 class="title">{{item.4}}<br></h2>
+                        <h4 class="matchDay">J-{{item.5}}</h4><a href="#">Info sur le match</a>
                     </div>
                 </div>
                 {% endfor %}
