Add sportwatch API for all pages

--- a/html/matchesResults.html
+++ b/html/matchesResults.html
@@ -26,11 +26,11 @@
                     data-aos="fade-up" data-aos-once="true">
                     <div class="d-flex flex-column justify-content-start align-items-center match-card">
                         <div class="d-flex justify-content-center align-items-center img-container">
-                            <div class="img" style="background-image: url(/static/img/{{item.2}}.png);"></div>
+                            <div class="img" style="background-image: url({{item.2}});"></div>
                             <h5 class="score">{{item.4}}</h5>
                             <h1>-</h1>
                             <h5 class="score">{{item.5}}</h5>
-                            <div class="img" style="background-image: url(/static/img/{{item.3}}.png);"></div>
+                            <div class="img" style="background-image: url({{item.3}});"></div>
                         </div>
                         <h1 class="title">{{item.0}} - {{item.1}}<br></h1>
                         <h2 class="title">{{item.6}}<br></h2><a href="#">Infos le match</a>
