--- a/html/noMatchesCalendar.html
+++ b/html/noMatchesCalendar.html
@@ -17,7 +17,7 @@
 
 <body class="d-flex flex-column justify-content-start align-items-center">
     <div class="d-flex justify-content-center ellipse-top-container">
-        <div class="d-flex justify-content-center align-items-center ellipse-top"><a href="/matchs/live"><i class="icon ion-home"></i>Home</a></div>
+        <div class="d-flex justify-content-center align-items-center ellipse-top"><a href="/"><i class="icon ion-home"></i>Home</a></div>
     </div>
     <div class="matches">
         <div class="container-fluid">
