--- a/html/matchs.html
+++ b/html/matchs.html
@@ -26,9 +26,9 @@
                     data-aos="fade-up" data-aos-delay="150" data-aos-once="true">
                     <div class="d-flex flex-column justify-content-start align-items-center match-card">
                         <div class="d-flex justify-content-center align-items-center img-container">
-                            <div class="img" style="background-image: url(/static/img/{{item.2}}.png);"></div>
+                            <div class="img" style="background-image: url({{item.2}});"></div>
                             <h1>-</h1>
-                            <div class="img" style="background-image: url(/static/img/{{item.3}}.png);"></div>
+                            <div class="img" style="background-image: url({{item.3}});"></div>
                         </div>
                         <h1 class="title"> {{item.0}} - {{item.1}} <br></h1>
                         <h2 class="title">{{item.4}}<br></h2>
