--- a/html/matchesResults.html
+++ b/html/matchesResults.html
@@ -33,7 +33,8 @@
                             <div class="img" style="background-image: url({{item.3}});"></div>
                         </div>
                         <h1 class="title">{{item.0}} - {{item.1}}<br></h1>
-                        <h2 class="title">{{item.6}}<br></h2><a href="#">Infos le match</a>
+                        <h2 class="title">{{item.6}}<br></h2>
+                        <a href="/matchs/results/stats/{{comp}}/{{item.7}}">Infos le match</a>
                     </div>
                 </div>
                 {% endfor %}
