--- a/html/noMatchesLive.html
+++ b/html/noMatchesLive.html
@@ -45,6 +45,7 @@
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
     <script src="/static/js/bs-init.js"></script>
+    <script src="/static/js/jsLive.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
 </body>
 
